<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".quiz">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SoalNumber"
        android:text="@string/soal_number"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        >

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selctedpilihan"
            android:visibility="gone"
            android:id="@+id/selectpilihan"
            android:textAlignment="center"
            android:fontFamily="@font/poppins"
            android:textColor="#ffffff">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CorrectAnswer"
            android:textColor="#ffffff"
            android:visibility="gone"
            android:textAlignment="center"
            android:text="@string/correctanswer"
            >

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="70dp"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:id="@+id/soal"
            android:text="@string/soal_1"
            android:fontFamily="@font/poppins"
            android:textSize="20sp">

        </TextView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FirstTwoPilihan"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/pilihanA"
            android:text="@string/soal1_A"
            android:background="@drawable/optiondesign"
            android:textColor="#000000"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:fontFamily="@font/poppins"
            >

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/pilihanB"
            android:text="@string/soal1_B"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:fontFamily="@font/poppins"
            >

        </TextView>




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RemainingTwoPilihan"
        android:layout_gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/pilihanC"
            android:text="@string/soal1_C"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:fontFamily="@font/poppins"
            >

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/pilihanD"
            android:text="@string/soal1_D"
            android:background="@drawable/optiondesign"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:fontFamily="@font/poppins"
            >

        </TextView>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/score"
            android:layout_gravity="end"
            android:fontFamily="@font/poppins"
            android:padding="10dp"/>


        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffa384"
            android:layout_gravity="bottom"
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false">

        </ProgressBar>

    </LinearLayout>




</LinearLayout>


