<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".corvus">

    <!--Scrollview-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--PARENT LAYOUT-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="Corvus ROM"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppinsbold"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--corvus1-->
            <androidx.cardview.widget.CardView
                android:onClick="corvus1"
                app:cardBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp"
                android:layout_margin="20dp">

                <LinearLayout
                    android:id="@+id/corvus1_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:src="@drawable/corvuslogo3"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tentang Corvus"
                        android:fontFamily="@font/poppinsbold"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/detailcorvus1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/corvustext"
                        android:visibility="gone"
                        android:textSize="15sp"
                        android:justificationMode="inter_word"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--corvus2-->
            <androidx.cardview.widget.CardView
                android:onClick="corvus2"
                app:cardBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp"
                android:layout_margin="20dp">

                <LinearLayout
                    android:id="@+id/corvus2_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:src="@drawable/xiaomi"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Download + Langkah Flashing"
                        android:fontFamily="@font/poppinsbold"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:autoLink="all"
                        android:textColorLink="#FF0000"
                        android:id="@+id/detailcorvus2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xiaomicorvus"
                        android:visibility="gone"
                        android:textSize="15sp"
                        android:justificationMode="inter_word"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--corvus3-->
            <androidx.cardview.widget.CardView
                android:onClick="corvus3"
                app:cardBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="20dp"
                android:layout_margin="20dp">

                <LinearLayout
                    android:id="@+id/corvus3_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:src="@drawable/realme"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Download + Langkah Flashing"
                        android:fontFamily="@font/poppinsbold"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:autoLink="all"
                        android:textColorLink="#FF0000"
                        android:id="@+id/detailcorvus3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/realmecorvus"
                        android:visibility="gone"
                        android:textSize="15sp"
                        android:justificationMode="inter_word"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/black"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>